--- a/express/package.json
+++ b/express/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
